better searchCourses method